--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
-django<2
-django-import-export
-pypyodbc
-django-pyodbc-azure
-geopy
-pygeocoder
+azure==0.9.0
+diff-match-patch==20121119
+Django==1.7.4
+django-autocomplete-light==2.0.9
+django-import-export==0.2.6
+geopy==1.9.0
+pygeocoder==1.2.5
+pypyodbc==1.3.3
+python-dateutil==2.4.0
+requests==2.5.1
+six==1.9.0
+tablib==0.10.0
